--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="beakerDescription">beaker</string>
     <string name="volumeText">Volume:</string>
+    <string name="title_activity_startup">StartupActivity</string>
 </resources>
