--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,8 @@
     <string name="action_settings">Settings</string>
     <string name="beakerDescription">beaker</string>
     <string name="volumeText">Volume:</string>
-    <string name="title_activity_startup">StartupActivity</string>
+    <string name="title_activity_startup">Select solution</string>
+    <string name="title_activity_edit">Edit solution</string>
+    <string name="title_activity_prepare">Prepare solution</string>
+    <string name="add_new_solution_button_text">ADD NEW</string>
 </resources>
