--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_edit">Edit solution</string>
     <string name="title_activity_prepare">Prepare solution</string>
     <string name="add_new_solution_button_text">ADD NEW</string>
+    <string name="FromEditToPrepButtonText">DONE</string>
 </resources>
