--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_prepare">Prepare solution</string>
     <string name="add_new_solution_button_text">ADD NEW</string>
     <string name="FromEditToPrepButtonText">DONE</string>
+    <string name="fromPrepToEditButtonText">BACK</string>
 </resources>
