UI design of Compound Activity,

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_startup">Select solution</string>
     <string name="title_activity_edit">Edit solution</string>
     <string name="title_activity_prepare">Prepare solution</string>
-    <string name="title_activity_compound">Choose compound</string>
+    <string name="title_activity_compound">Add compound</string>
     <string name="add_new_solution_button_text">ADD NEW</string>
     <string name="FromEditToPrepButtonText">DONE</string>
     <string name="fromPrepToEditButtonText">BACK</string>
