Further refactoring - changed to lambdas, introduced saving local state. Corrected tests@

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="fromPrepToEditButtonText">BACK</string>
     <string name="buttonNewCompound">+</string>
     <string name="mililiters">ml</string>
+    <string name="solutionListPrepFormat">%s ml  %d components</string>
 </resources>
