--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">FinalDilution</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_save">save</string>
+    <string name="action_undo">undo</string>
+    <string name="action_redo">redo</string>
     <string name="beakerDescription">beaker</string>
     <string name="volumeText">Volume:</string>
     <string name="title_activity_startup">Select solution</string>
