--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="application_name_first_word">Final</string>
     <string name="application_name_second_word">Dilution</string>
     <string name="professore">Professore</string>
+    <string name="mass_in_brackets">"[%s]"</string>
 </resources>
