Changed IUPAC name to name.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="title_add_new_compound">Add new compound</string>
     <string name="trivial_name">Trivial name</string>
     <string name="molar_mass">Molar mass</string>
-    <string name="iupac_name">IUPAC name</string>
+    <string name="iupac_name">Name</string>
     <string name="chemical_formula">Chemical formula</string>
     <string name="new_compound_back">back</string>
     <string name="new_compound_proceed">Done</string>
