--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,10 +22,13 @@
     <string name="professore">Professore</string>
     <string name="mass_in_brackets">"[%s]"</string>
     <string name="title_add_new_compound">Add new compound</string>
-    <string name="trivial_name">Trivial name</string>
-    <string name="molar_mass">Molar mass</string>
+    <string name="trivial_name">Trivial name (optional)</string>
+    <string name="molar_mass">Molar mass (for molar concentrations)</string>
     <string name="iupac_name">Name</string>
-    <string name="chemical_formula">Chemical formula</string>
+    <string name="state_of_matter">State of matter</string>
+    <string name="state_of_matter_solid">Solid</string>
+    <string name="state_of_matter_liquid">Liquid</string>
+    <string name="chemical_formula">Chemical formula (optional)</string>
     <string name="new_compound_back">back</string>
     <string name="new_compound_proceed">Done</string>
     <string name="exit_search_description">Exit search</string>
