--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">Final Dilution</string>
+    <string name="action_rename">rename</string>
     <string name="action_save">save</string>
+    <string name="action_clone">clone</string>
+    <string name="action_delete">delete</string>
     <string name="action_undo">undo</string>
     <string name="action_redo">redo</string>
     <string name="beakerDescription">beaker</string>
