--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_undo">undo</string>
     <string name="action_redo">redo</string>
     <string name="beakerDescription">beaker</string>
-    <string name="volumeText">Volume:</string>
+    <string name="volumeText">Total volume:</string>
     <string name="title_activity_startup">Select solution</string>
     <string name="title_activity_prepare">Prepare solution</string>
     <string name="title_activity_compound">Add compound</string>
