--- a/releaseNotes
+++ b/releaseNotes
@@ -4,9 +4,9 @@ New  features
 
 Fixes
 
- - Fixed hidden compound during search
-
  - Fixed Sucrose
+
+ - Focus stays on Edit component text edition when changing concentration
 
 </en-GB>
 
