--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_save">save</string>
     <string name="action_clone">clone</string>
     <string name="action_delete">delete</string>
+    <string name="action_edit">edit</string>
     <string name="action_remove">remove</string>
     <string name="action_undo">undo</string>
     <string name="action_redo">redo</string>
