Added final animation well done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="milimol">mM</string>
     <string name="mg_ml">mg/ml</string>
     <string name="nx">nX</string>
+    <string name="well_done">Well done</string>
 </resources>
