Fixed density calculation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="stock_concentration">Stock concentration</string>
     <string name="percent">%</string>
     <string name="mol">M</string>
-    <string name="milimol">mM</string>
+    <string name="millimol">mM</string>
     <string name="mg_ml">mg/ml</string>
     <string name="nx">nX</string>
     <string name="well_done">Well done</string>
